fix z-index popup

--- a/assets/css/main-contain.css
+++ b/assets/css/main-contain.css
@@ -31,7 +31,7 @@
         width: 102%;
         margin: 0px -2px;
         padding: 9px 0px;
-        z-index: 1;
+        z-index: 3;
         display: none;
     }
     
